feat: accept terms api
